# AIE8

./: Medical_Assistant_RAG_FullCode_Starter.ipynb  requirements.txt
01_Prototyping Best Practices & Vibe Check/: README.md
02_Embeddings_and_RAG/: Pythonic_RAG_Assignment.ipynb
02_Embeddings_and_RAG/aimakerspace/: vectordatabase.py
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  pyproject.toml
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb  pyproject.toml
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
