[project]
name = "06-multi-agent-with-langgraph"
version = "0.1.0"
description = "Multi Agent Workflow with LangGraph"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.10",
    "langgraph>=0.2.39",
    "langchain-openai>=0.2.1",
    "langchain-community>=0.3.10",
    "langchain-tavily>=0.0.4",
    "langchain-qdrant>=0.2.1",
    "tiktoken>=0.7.0",
    "qdrant-client>=1.8.2",
    "pymupdf>=1.24.10",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.0.1",
    "pyppeteer>=2.0.0",
]
